--- a/src/styles/StationLogin.css
+++ b/src/styles/StationLogin.css
@@ -155,7 +155,7 @@
 }
 
 .input-wrapper input {
-    width: 85%;
+    width: 100%;
     padding: 12px 15px 12px 45px;
     background: #fff;
     border: 2px solid #e2e8f0;
@@ -163,6 +163,7 @@
     color: var(--dispro-text);
     font-size: 1rem;
     transition: all 0.2s;
+    box-sizing: border-box;
 }
 
 .input-wrapper input:focus {
